[27-bug-adding-blank-records-fix-in-all-services] fixed bug that is adding blank records to the database
