# services/router/nonprod/network_api.js
@@ -2,9 +2,11 @@ var router = require('express').Router();
 var fs = require('fs');
 var path = require('path');
 
-const sheets = require('./../../../google_sheets/api/google_sheets_api.js');
+const sheets = require('./../../../google_sheets/google_sheets_api.js');
 
-var networkController = require('./../../../services/controller/nonprod/network_service.js');
+var networkService = require('./../../../services/controller/nonprod/network_service.js');
+
+router.get('/api/network', networkService.getAllNetworkRecords);
 
 router.put('/api/network', (req,res) => {
   fs.readFile(path.join(__dirname, './../../../resources/credentials.json'), (err, content) => {
@@ -13,12 +15,12 @@ router.put('/api/network', (req,res) => {
     }
 
     sheets.authorize(JSON.parse(content), (auth) => {
-      networkController.main(auth, req, res);
+      networkService.main(auth, req, res);
     });
 
   });
 });
 
-router.put('/api/network/join', networkController.mainJoin);
+router.put('/api/network/join', networkService.mainJoin);
 
 module.exports = router;
